--- a/_posts/2018-11-22-resume.md
+++ b/_posts/2018-11-22-resume.md
@@ -6,23 +6,14 @@ group: "personal"
 tag: "common"
 permalink: /resume_en/
 img_url: "/assets/kenny.jpeg"
+pdf: true
 ---
 
-# Outline
-- Attributes
-- Education
-- Work Experiences
-- Projects
-- Skills
-
-
-## Attributes
-* Dominic.wang
+# Dominic Wang
 * Male
-* 1985.03.12
-* Shandong.Dongying
-* Master degree
-* 10 years
+* Born: 1985.03.12
+* Birth Place: Shandong.Dongying
+* 10 years in industry
 
 ## Education
 > 2009-2011 Japan Advanced Institute of Science & Technology
@@ -33,8 +24,8 @@ img_url: "/assets/kenny.jpeg"
  * Software College
  * Bachelor degree of Software Enginnering
 
-## Work Experiences
-> 2007-2009 Huajun Tech.Ltd, China & Sunrise.Co.Ltd Japan
+## Experience
+> 2007-2009 Sunrise.Co.Ltd Japan
  * Software Enginner, PM
  * Java & VBA based erp systems
  * Outsourcing, Onshore & Offshore
@@ -44,12 +35,7 @@ img_url: "/assets/kenny.jpeg"
  * Java & Flex based web monitoring system
  * C & Vxworks based system-level communication framework
 
-> 2013-2014 Weexing micro systems Tech.Co.Ltd
- * Ceo, Founder
- * Ruby based wechat public platform SAAS provider
- * Rails & Jquery & Bootstrap 
-
-> 2014-2015 Wooul Financial.Co.Ltd
+> 2013-2015 Wooul Financial.Co.Ltd
  * CTO, Cofounder
  * Ruby based P2P financial web system
  * Rails & Jquery & Bootstrap  
@@ -59,10 +45,15 @@ img_url: "/assets/kenny.jpeg"
  * JavaEE based P2P financial web system
  * JaveEE core & Html mobile & Html desktop & Native apps 
 
-> 2017-now Pooul Tech.Co.Ltd
+> 2017-2018 Pooul Tech.Co.Ltd
  * CTO
  * Ruby based online payment processing system
- * Ruby & Rails & Sinatra & EventMachine & Wechat Small Program  
+ * Ruby & Rails & Sinatra & EventMachine & Wechat Small Program 
+
+ > 2018-now Lvduoduo Tech(shenzhen).Co.Ltd
+ * Technical Director
+ * PHP based online Hotel&Tour mobile application
+ * PHP & Laravel & Native Apps & Vue-ElementUI    
 
 ## Skills
 * **Ruby** Excellent
@@ -72,8 +63,15 @@ img_url: "/assets/kenny.jpeg"
 * **Product Design** Good at logic
 * **Agile Project Management** Excellent
 * **Devops Toolchain** Excellent
-* **Frontend** Workable
+* **JS/HTML** Good
+* **Linux** Good
 * **UI Design** Bad sense  
+
+## Interests
+* Programming
+* Raspberry Pi/Hardware
+* Video Games
+* Reading
 
 
 
