--- a/_posts/2018-11-22-resume.md
+++ b/_posts/2018-11-22-resume.md
@@ -55,6 +55,114 @@ pdf: true
  * PHP based online Hotel&Tour mobile application
  * PHP & Laravel & Native Apps & Vue-ElementUI    
 
+## Project Experience
+> Lvduoduo 
+
+ * Position: Technical Director
+ * Detail:
+    * Backend-Api: PHP-Lumen
+    * Admin: Vue + ElementUI
+    * Minipg: Native Minipg
+    * IOS,Android: Native
+    * CI: Jenkins(IOS, Android) + Deployer(PHP, JS)
+    * DB: Mysql
+    * Log: ELK
+    * Project: TAPD + Kanban
+ * Responsbilities
+   * Agile Project Management
+   * Devops
+   * Architecture Design
+   * Programmer
+
+> Pooul Payment Process System
+
+ * Position: CTO
+ * Detail:
+    * Backend-Api: Ruby + Sinatra + EventMachine
+    * Admin: Rails + SemanticUI
+    * Minipg: Native Minipg
+    * MobileHtml: Vue + Html
+    * CI: Mina(Ruby) 
+    * DB: MongoDb, ELK
+    * Log: ELK
+    * Project: Teambition
+ * Responsbilities
+   * Product Management
+   * Project Management
+   * Architecture Design
+   * Programmer 
+   * Devops  
+
+> Kaisa Finance P2P System
+
+ * Position: Advanced Technical Manager
+ * Detail:
+    * Backend-Api: JavaEE, Python + Flask
+    * Admin: JaveEE + Bootstrap, Python + React
+    * Minipg: Native Minipg
+    * MobileHtml: Html + Jquery
+    * CI: Jenkins
+    * DB: Mysql
+    * Log: Splunk
+    * Project: Zentao
+ * Responsbilities
+   * Project Management
+   * Architecture Design(Java)
+   * Programmer(Java, Front) 
+   * Devops  
+
+> Wooul Finance P2P System
+
+ * Position: CTO
+ * Detail:
+    * Backend-Api: Ruby + Rails
+    * Admin: Rails + Bootstrap
+    * CI: Mina
+    * DB: Mysql
+    * Project: Teambition
+ * Responsbilities
+   * Project Management
+   * Architecture Design(Ruby)
+   * Programmer(Ruby, Front) 
+   * Devops 
+
+> Huawei iFOS Device Monitoring System
+
+ * Position: Advanced Software Enginner
+ * Detail:
+    * Backend-Api: JavaEE + Osgi
+    * Front: Flex
+    * CI: Script
+    * DB: Mysql
+ * Responsbilities
+   * Project Management
+   * Programmer(Java, Flex) 
+            
+> Huawei iDMS Device Controller Framework
+
+ * Position: Advanced Software Enginner
+ * Detail:
+    * OS: Vxworks 
+    * Language: C
+    * Bus: I2C + 485 
+    * CI: Script
+ * Responsbilities
+   * Devops
+   * Programmer(C) 
+
+> GE & YOKOGAWA Medical ERP
+
+ * Position: Software Enginner
+ * Detail:
+    * Backend: JAVA, VBA
+    * DB: Oracle, Access
+    * Front: Winform, Web
+    * CI: Cruise Control(CC)
+ * Responsbilities
+   * Devops
+   * Programmer(Java, VBA)    
+            
+
 ## Skills
 * **Ruby** Excellent
 * **Java** Excellent
